--- a/initial_exploration.Rmd
+++ b/initial_exploration.Rmd
@@ -62,19 +62,46 @@ ggplot(vowel_df2, aes(x = year, y = avg_num, color = sex)) + geom_line()
 ```
 
 
+## Average number of constants in a row (across all people)
+```{r}
+max(sapply(str_split("Mia", "[!aeiouAEIOU]")[[1]], nchar))
+
+longest_run <- rep(NA, nrow(babynames))
+for (i in 1:nrow(babynames)) {
+  name <- babynames$name[i]
+  longest_run[i] <- max(sapply(str_split(name, "[!aeiouAEIOU]")[[1]], nchar))
+}
+
+consonant_run_df <- babynames %>%
+  mutate(longest_run = longest_run) %>%
+  group_by(year, sex) %>%
+  summarize(weighted_longest_run = sum(n * longest_run)/sum(n)) 
 
 
+ggplot(aes(x = year, y = weighted_longest_run, color = sex), data = consonant_run_df) + 
+  geom_line() + 
+  scale_x_continuous(breaks = c(seq(1880, 2017, 10), 2017)) +
+  scale_y_continuous(breaks = c(1.7, seq(1.75, 1.95, 0.05), 2.0), limits = c(1.7, 2)) + 
+  scale_color_manual(values = c("purple2", "mediumaquamarine")) + 
+  labs(x = "Year", y = "Number of Consonants", color = "Sex") + 
+  ggtitle("Average max number of consonants in a row in first name, by year") + 
+  theme_classic() + theme(legend.position = "bottom") 
+                                                                                                                                                          
+```
 
+# OLD IDEAS (DELETE UNLESS WE WANT THEM)
 
-# ALTERNATIVE IDEAS 
-
-## Average number of "rare" letters 
+## Average number of "rare" letters - OLD 
 ```{r}
 char_list <- strsplit(tolower(paste(babynames$name, collapse = "")), NULL)[[1]]
-letter_count <- table(char_list)
+letter_count <- table(char_list) #note this is NOT weighted by how common a name is (which I think is okay?) -- we're taking rare here to mean it doens't show up in many names, not it isn't given to many people 
 ```
 The five least common letters in names are x, q, w, p, and f. 
 
+
+
+
+This is over all names: 
 ```{r}
 rare_df <- babynames %>%
   mutate(num_rare = str_count(name, '[xqwpfXQWPF]')) %>%
@@ -83,6 +110,55 @@ rare_df <- babynames %>%
 
 ggplot(rare_df, aes(x = year, y = avg_num, color = sex)) + geom_line()
 ```
+
+This is over all people:
+```{r}
+rare_df2 <- babynames %>%
+  mutate(num_rare = str_count(name, '[xqwpfXQWPF]')) %>%
+  group_by(year, sex) %>%
+  summarize(weighted_avg_num = sum(num_rare * n) / sum(n)) 
+
+ggplot(rare_df2, aes(x = year, y = weighted_avg_num, color = sex)) + geom_line()
+```
+
+## Rarest three letter combinations - OLD 
+
+```{r}
+n <- nchar("Jaylin")
+substrings <- sapply(1:(n-2), function(i) str_sub("Jaylin", i, i+2))
+
+
+
+get_combo_dict <- function(df) {
+  d <- c("test" = 0)
+for (i in 1:nrow(df)) {
+  name <- tolower(df$name[i])
+  n <- nchar(name)
+  substrings <- sapply(1:(n-2), function(i) str_sub(name, i, i+2))
+  for (j in 1:length(substrings)) {
+    #if in dictionary, increase count
+    if (substrings[j] %in% names(d)) {
+      d[substrings[j]] <- d[substrings[j]] + 1 
+    }
+    else{
+      d[substrings[j]] <- 1 
+    }
+  }
+}
+return(d)
+}
+
+combo_dict <- get_combo_dict(babynames)
+
+tail(combo_dict[order(-unlist(combo_dict))], 20) #these names must only appear once? (they'd duplicate if they were included in multiple years)
+#should I have done this over all unique names, not all the rows in the dataset? 
+
+#need to identify what names these go to? 
+```
+
+
+
+
 
 
 
