--- a/reports/unblinded.bib
+++ b/reports/unblinded.bib
@@ -68,3 +68,22 @@
   isbn = {978-3-319-24277-4},
   url = {https://ggplot2.tidyverse.org},
 }
+
+@Manual{arima2,
+    title = {arima2: Likelihood Based Inference for ARIMA Modeling},
+    author = {Jesse Wheeler and Noel McAllister and Dhajanae Sylvertooth},
+    year = {2024},
+    note = {R package version 3.3.0},
+    url = {https://CRAN.R-project.org/package=arima2},
+  }
+
+@Article{forecast,
+    title = {Automatic time series forecasting: the forecast package for {R}},
+    author = {Rob J Hyndman and Yeasmin Khandakar},
+    journal = {Journal of Statistical Software},
+    volume = {27},
+    number = {3},
+    pages = {1--22},
+    year = {2008},
+    doi = {10.18637/jss.v027.i03},
+  }
