--- a/reports/unblinded.Rmd
+++ b/reports/unblinded.Rmd
@@ -198,7 +198,7 @@ Next, we plot the forecasted values for the next 40 years:
 ```{r, echo = F, warning = F, message = F}
 female_final <- stats::arima(resid_female, order = c(2, 0, 1))
 
-h <- 40
+h <- 10
 
 future_trend <- forecast(lm_trend_female, h = h)
 fc_resid <- forecast(female_final, h = h)
@@ -210,7 +210,9 @@ plot_df2 <- data.frame(year = seq(1880, 2017+h, by = 1), orig = c(ts_female, rep
 ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "purple2") + geom_line(aes(y = forecasted, x = year), color = "navyblue", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Female: Observed Max Consonant Run vs. Forecast") 
 ```
 
-These forecasted points are fairly extreme and raise some doubts about our model. The quadratic fit to de-trend the data indicates a large drop past 2017; this is necessary to fit a quadratic. However, it is unlikely that this downward trend will continue for 40 years. We suspect that the average max consonant run might exhibit cyclical behavior beyond what we are able to observe with these 138 data points. For instance, suppose cycles occur approximately every 50 years, which seems plausible given the graph. If this is true, our observed data only includes approximately two to three cycles, which isn't enough to capture the true relationship. Instead, our quadratic fit to the data would predict that the decrease that started in the 1970s will continue. 
+The 10 year forecast shows a slight uptick in the average longest consonant run of female baby names. If we extended this horizon, we would see a dramatic decrease (not pictured). This is likely because our model is unable to extrapolate well, which is unsuprising. 
+
+The quadratic fit to de-trend the data indicates a large drop past 2017; this is necessary to fit a quadratic. However, it is unlikely that this downward trend will continue for 40 years. We suspect that the average max consonant run might exhibit cyclical behavior beyond what we are able to observe with these 138 data points. For instance, suppose cycles occur approximately every 50 years, which seems plausible given the graph. If this is true, our observed data only includes approximately two to three cycles, which isn't enough to capture the true relationship. Instead, our quadratic fit to the data would predict that the decrease that started in the 1970s will continue. 
 
 After discovering this, we attempted to use a LOESS smoother to detrend instead. The plot below displays the observed values with the LOESS predictions. However, this looks very similar to the quadratic smoother and exhibits the same decreasing behavior for the 2000s. We cannot observe the forecasted values here, so we choose to stick with the ARMA(2,1) errors and the quadratic model. Interestingly, the best model for the residuals from the LOESS smoother is also an ARMA(2,1), reinforcing this decision. 
 ```{r, echo = F, warning = F, message = F}
@@ -219,7 +221,7 @@ loess_female_fitted <- fitted(loess_female)
 
 plot_df2 <- data.frame(year = seq(1880, 2017, by = 1), orig = c(ts_female), fitted = loess_female_fitted)
 
-ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "purple2") + geom_line(aes(y = fitted, x = year), color = "black", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Female: Observed Max Consonant Run vs. Fitted Quadratic Values")
+ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "purple2") + geom_line(aes(y = fitted, x = year), color = "black", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Female: Observed Max Consonant Run vs. Fitted LOESS Values")
 
 loess_resid <- ts(consonant_female$weighted_longest_run-loess_female_fitted ,
                 start = min(consonant_female$year), 
@@ -229,13 +231,65 @@ loess_resid <- ts(consonant_female$weighted_longest_run-loess_female_fitted ,
 
 Ultimately, we need more years of data to be able to say anything concrete about how the average longest consonant run in female baby names changes. It's interesting that both of our de-trending options treated the two separate peaks and the valley between them as noise, which would suggest a time series that only has one peak in 138 years, which might indeed be what's happening. 
 
-
-Next, we will look at fitting a model to the average max consonant run in male baby names. 
+Next, we will look at fitting a model to the average max consonant run in male baby names. We start by fitting both a quadratic and a LOESS smoother to detrend our data. 
 
 ```{r, echo = F}
 consonant_male <- filter(consonant_run_df, sex == "M")
+
+ts_male <- ts(consonant_male$weighted_longest_run,
+                start = min(consonant_male$year), 
+                end   = max(consonant_male$year),
+                frequency = 1)
+
+lm_trend_male <- tslm(ts_male ~ trend+I(trend^2))
+
+plot_df <- data.frame(year = seq(1880, 2017, by = 1), orig = c(ts_male), fitted = c(fitted(lm_trend_male)))
+
+ggplot(plot_df) + geom_line(aes(y = orig, x = year), color = "mediumaquamarine") + geom_line(aes(y = fitted, x = year), color = "black", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Male: Observed Max Consonant Run vs. Fitted Quadratic Values")
+
+resid_male <- residuals(lm_trend_male)
 ```
 
+
+```{r, echo = F, message = F, warning = F}
+loess_male <- loess(weighted_longest_run ~ year, consonant_male)
+loess_male_fitted <- fitted(loess_male)
+
+plot_df2 <- data.frame(year = seq(1880, 2017, by = 1), orig = c(ts_male), fitted = loess_male_fitted)
+
+ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "mediumaquamarine") + geom_line(aes(y = fitted, x = year), color = "black", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Male: Observed Max Consonant Run vs. Fitted LOESS Values")
+
+loess_resid <- ts(consonant_male$weighted_longest_run-loess_male_fitted ,
+                start = min(consonant_male$year), 
+                end   = max(consonant_male$year),
+                frequency = 1)
+```
+
+
+```{r, echo = F, message = F, warning = F}
+set.seed(49282)
+detrend_male <- aic_table(resid_male, P = 5, Q = 5, D = 0)
+knitr::kable(detrend_female, caption = "AIC Table for Quadratic Detrended Male Max Consonant Run Data")
+```
+
+Here, the `NA`s are caused by stationarity warnings, which suggests our quadratic detrending may have not been sufficient. Let's try this with the residuals from the LOESS smoother instead: 
+```{r, echo = F, message = F, warning = F}
+detrend_male_loess <- aic_table(loess_resid, P = 5, Q = 5, D = 0)
+knitr::kable(detrend_male_loess, caption = "AIC Table for LOESS Detrended Male Max Consonant Run Data")
+```
+
+The `NA`s here are caused by convergence issues, so we will avoid  large $p$ and $q$. By AIC, the best model here seems to be an ARMA(4,2):
+
+```{r, echo = F, message = F, warning = F}
+plot(arima2::arima(loess_resid, order = c(4, 0, 2))) + ggtitle("Inverse Roots For ARMA(4,2) Model")
+```
+One of the MA roots is right on the border, and two of the AR roots are very close. Among the AIC values for $q = 0, 1$, the best one is an ARMA(2,1) which is also the value suggested by `auto.arima`. 
+
+```{r, echo = F, message = F, warning = F}
+plot(arima2::arima(loess_resid, order = c(2, 0, 1))) + ggtitle("Inverse Roots For ARMA(2,1) Model")
+```
+
+This looks much better. 
 
 # Conclusion? Discussion? 
 
