updating consonant section

--- a/reports/unblinded.Rmd
+++ b/reports/unblinded.Rmd
@@ -67,6 +67,8 @@ For each year and sex, we calculated three values aimed at capturing the complex
 
 We chose these questions because they seemed to address the question of "complexity" while being fairly easy to calculate and intuitive to explain. "Complexity" can mean very different things when it comes to names. We would generally consider very long names to be complex, but short names with a lot of consonants in a row might also fall under "complex names" especially if the repeated consonants make the name hard to pronounce. We initially got the idea to do average length and average vowel count from a data visualization we found [@data_viz] and came up with the idea for longest consonant run on our own. 
 
+We primarily focus on modeling these time series properly, with a slight focus on forecasting what these trends might look like in the next few years. 
+
 # Exploratory Data Analysis 
 
 We start by exploring what these time series look like visually. First, we plot the average length of the names of all babies born 1880-2017, separated by sex. 
@@ -157,7 +159,7 @@ ts_female <- ts(consonant_female$weighted_longest_run,
                 end   = max(consonant_female$year),
                 frequency = 1)
 
-lm_trend_female <- tslm(ts_female ~ trend+I(trend^2))
+lm_trend_female <- tslm(ts_female ~ trend+I(trend^2) + I(trend^3))
 
 plot_df <- data.frame(year = seq(1880, 2017, by = 1), orig = c(ts_female), fitted = c(fitted(lm_trend_female)))
 
@@ -167,11 +169,11 @@ ggplot(plot_df) + geom_line(aes(y = orig, x = year), color = "purple2") + geom_l
 Now, we fit an $ARMA(p,q)$ model to the residuals created from the quadratic polynomial. To choose $p$ and $q$, we consider $p \in (0,5)$ and $q \in (0,5)$ and calculate the AIC for each resulting model. We use a modified version of the code shown in class [@notes531] that inserts a `NA` value for any $p,q$ combinations that produce errors or warnings. Note that we are using `arima2` [@arima2] to help avoid optimization issues. Essentially, we are fitting:
 
 $$
-Y_n^Q = \alpha + \beta_1 X_n + \beta_2 X_n^2 + \epsilon_n
+Y_n = \alpha + \beta_1 X_n + \beta_2 X_n^2 + \epsilon_n
 $$
 $\alpha$, $beta_1$, and $\beta_2$ are obtained from the regression model and are 1.749, 0.004247, and -0.00002508 respectively. $\epsilon_n$ is a Gaussian ARMA process. The table below displays AIC values for different $p,q$ values for this ARMA model. 
 
-```{r, echo = F, warning = F, message = F, include = F}
+```{r, cache = T, echo = F, warning = F, message = F, include = F}
 set.seed(49282)
 resid_female <- residuals(lm_trend_female)
 detrend_female <- aic_table(resid_female, P = 5, Q = 5, D = 0)
@@ -194,11 +196,11 @@ plot(arima2::arima(resid_female, order = c(2, 0, 1))) + ggtitle("Inverse Roots F
 
 Interestingly, an $ARMA(2,1)$ model is also what the `auto.arima` model from the `forecast` package [@forecast] suggests. Given that this model does not have the invertibility problems of models with larger $p$ and $q$, we will choose this $ARMA(2,1)$ model fit to the residuals of a cubic polynomial as our final model. 
 
-Next, we plot the forecasted values for the next 40 years: 
+Next, we plot the forecasted values for the next 10 years: 
 ```{r, echo = F, warning = F, message = F}
 female_final <- stats::arima(resid_female, order = c(2, 0, 1))
 
-h <- 10
+h <- 20
 
 future_trend <- forecast(lm_trend_female, h = h)
 fc_resid <- forecast(female_final, h = h)
@@ -207,21 +209,21 @@ fc_combined <- future_trend$mean + fc_resid$mean
 
 plot_df2 <- data.frame(year = seq(1880, 2017+h, by = 1), orig = c(ts_female, rep(NA, h)), fitted = c(fitted(lm_trend_female), rep(NA,h)), forecasted = c(rep(NA, 138), fc_combined))
 
-ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "purple2") + geom_line(aes(y = forecasted, x = year), color = "navyblue", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Female: Observed Max Consonant Run vs. Forecast") 
+ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "purple2") + geom_line(aes(y = forecasted, x = year), color = "red", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Female: Observed Max Consonant Run vs. Forecast") 
 ```
 
-The 10 year forecast shows a slight uptick in the average longest consonant run of female baby names. If we extended this horizon, we would see a dramatic decrease (not pictured). This is likely because our model is unable to extrapolate well, which is unsuprising. 
+The 20 year forecast shows a dramatic decrease in the average longest consonant run of female baby names. This is likely because our model is unable to extrapolate well, which is not surprising. 
 
-The quadratic fit to de-trend the data indicates a large drop past 2017; this is necessary to fit a quadratic. However, it is unlikely that this downward trend will continue for 40 years. We suspect that the average max consonant run might exhibit cyclical behavior beyond what we are able to observe with these 138 data points. For instance, suppose cycles occur approximately every 50 years, which seems plausible given the graph. If this is true, our observed data only includes approximately two to three cycles, which isn't enough to capture the true relationship. Instead, our quadratic fit to the data would predict that the decrease that started in the 1970s will continue. 
+The cubic fit to de-trend the data indicates a large drop past 2017. However, it is unlikely that this downward trend will continue for 20 years. We suspect that the average max consonant run might exhibit cyclical behavior beyond what we are able to observe with these 138 data points. 
 
-After discovering this, we attempted to use a LOESS smoother to detrend instead. The plot below displays the observed values with the LOESS predictions. However, this looks very similar to the quadratic smoother and exhibits the same decreasing behavior for the 2000s. We cannot observe the forecasted values here, so we choose to stick with the ARMA(2,1) errors and the quadratic model. Interestingly, the best model for the residuals from the LOESS smoother is also an ARMA(2,1), reinforcing this decision. 
+After discovering this, we attempted to use a LOESS smoother to detrend instead. The plot below displays the observed values with the LOESS predictions. However, this looks very similar to the cubic smoother and exhibits the same decreasing behavior for the 2000s. We cannot observe the forecasted values here, so we choose to stick with the ARMA(2,1) errors and the quadratic model. Interestingly, the best model for the residuals from the LOESS smoother is also an ARMA(2,1), reinforcing this decision. 
 ```{r, echo = F, warning = F, message = F}
 loess_female <- loess(weighted_longest_run ~ year, consonant_female)
 loess_female_fitted <- fitted(loess_female)
 
 plot_df2 <- data.frame(year = seq(1880, 2017, by = 1), orig = c(ts_female), fitted = loess_female_fitted)
 
-ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "purple2") + geom_line(aes(y = fitted, x = year), color = "black", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Female: Observed Max Consonant Run vs. Fitted LOESS Values")
+ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "purple2") + geom_line(aes(y = fitted, x = year), color = "red", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Female: Observed Max Consonant Run vs. Fitted LOESS Values")
 
 loess_resid <- ts(consonant_female$weighted_longest_run-loess_female_fitted ,
                 start = min(consonant_female$year), 
@@ -231,9 +233,9 @@ loess_resid <- ts(consonant_female$weighted_longest_run-loess_female_fitted ,
 
 Ultimately, we need more years of data to be able to say anything concrete about how the average longest consonant run in female baby names changes. It's interesting that both of our de-trending options treated the two separate peaks and the valley between them as noise, which would suggest a time series that only has one peak in 138 years, which might indeed be what's happening. 
 
-Next, we will look at fitting a model to the average max consonant run in male baby names. We start by fitting both a quadratic and a LOESS smoother to detrend our data. 
+Next, we will look at fitting a model to the average max consonant run in male baby names. We start by fitting both a cubic estimator to detrend our data. 
 
-```{r, echo = F}
+```{r, echo = F, warning = F, message = F}
 consonant_male <- filter(consonant_run_df, sex == "M")
 
 ts_male <- ts(consonant_male$weighted_longest_run,
@@ -241,55 +243,56 @@ ts_male <- ts(consonant_male$weighted_longest_run,
                 end   = max(consonant_male$year),
                 frequency = 1)
 
-lm_trend_male <- tslm(ts_male ~ trend+I(trend^2))
+lm_trend_male <- tslm(ts_male ~ trend+I(trend^2) + I(trend^3))
 
 plot_df <- data.frame(year = seq(1880, 2017, by = 1), orig = c(ts_male), fitted = c(fitted(lm_trend_male)))
 
-ggplot(plot_df) + geom_line(aes(y = orig, x = year), color = "mediumaquamarine") + geom_line(aes(y = fitted, x = year), color = "black", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Male: Observed Max Consonant Run vs. Fitted Quadratic Values")
+ggplot(plot_df) + geom_line(aes(y = orig, x = year), color = "mediumaquamarine") + geom_line(aes(y = fitted, x = year), color = "black", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Male: Observed Max Consonant Run vs. Fitted Cubic Values")
 
 resid_male <- residuals(lm_trend_male)
 ```
 
 
-```{r, echo = F, message = F, warning = F}
-loess_male <- loess(weighted_longest_run ~ year, consonant_male)
-loess_male_fitted <- fitted(loess_male)
-
-plot_df2 <- data.frame(year = seq(1880, 2017, by = 1), orig = c(ts_male), fitted = loess_male_fitted)
-
-ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "mediumaquamarine") + geom_line(aes(y = fitted, x = year), color = "black", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Male: Observed Max Consonant Run vs. Fitted LOESS Values")
-
-loess_resid <- ts(consonant_male$weighted_longest_run-loess_male_fitted ,
-                start = min(consonant_male$year), 
-                end   = max(consonant_male$year),
-                frequency = 1)
-```
+Next, we fit an ARMA model to the residuals generated from this cubic polynomial. 
 
 
-```{r, echo = F, message = F, warning = F}
+```{r, cache = T, echo = F, message = F, warning = F}
 set.seed(49282)
 detrend_male <- aic_table(resid_male, P = 5, Q = 5, D = 0)
-knitr::kable(detrend_female, caption = "AIC Table for Quadratic Detrended Male Max Consonant Run Data")
+knitr::kable(detrend_male, caption = "AIC Table for Quadratic Detrended Male Max Consonant Run Data")
 ```
 
-Here, the `NA`s are caused by stationarity warnings, which suggests our quadratic detrending may have not been sufficient. Let's try this with the residuals from the LOESS smoother instead: 
+The AIC table suggests an ARMA(5,4) model, so we look at the inverse roots of that model: 
 ```{r, echo = F, message = F, warning = F}
-detrend_male_loess <- aic_table(loess_resid, P = 5, Q = 5, D = 0)
-knitr::kable(detrend_male_loess, caption = "AIC Table for LOESS Detrended Male Max Consonant Run Data")
+plot(arima2::arima(resid_male, order = c(5, 0, 4))) + ggtitle("Inverse Roots For ARMA(5,4) Model")
 ```
 
-The `NA`s here are caused by convergence issues, so we will avoid  large $p$ and $q$. By AIC, the best model here seems to be an ARMA(4,2):
-
-```{r, echo = F, message = F, warning = F}
-plot(arima2::arima(loess_resid, order = c(4, 0, 2))) + ggtitle("Inverse Roots For ARMA(4,2) Model")
-```
-One of the MA roots is right on the border, and two of the AR roots are very close. Among the AIC values for $q = 0, 1$, the best one is an ARMA(2,1) which is also the value suggested by `auto.arima`. 
+This includes many MA and AR roots right on the border, so this is probably not the best model. We investigated more of these plots for various combinations, and settled on an $ARMA(4,0)$ model, where the roots are not on the border of invertibility: 
 
 ```{r, echo = F, message = F, warning = F}
-plot(arima2::arima(loess_resid, order = c(2, 0, 1))) + ggtitle("Inverse Roots For ARMA(2,1) Model")
+plot(arima2::arima(resid_male, order = c(4, 0, 0))) + ggtitle("Inverse Roots For ARMA(4,0) Model")
 ```
 
-This looks much better. 
+This looks much better, so we choose ARMA(4,0) fit to the residuals of a cubic polynomial as our best model. 
+
+```{r, echo = F, warning = F, message = F}
+male_final <- stats::arima(resid_male, order = c(4, 0, 0))
+
+h <- 20
+
+future_trend <- forecast(lm_trend_male, h = h)
+fc_resid <- forecast(male_final, h = h)
+
+fc_combined <- future_trend$mean + fc_resid$mean
+
+plot_df2 <- data.frame(year = seq(1880, 2017+h, by = 1), orig = c(ts_male, rep(NA, h)), fitted = c(fitted(lm_trend_male), rep(NA,h)), forecasted = c(rep(NA, 138), fc_combined))
+
+ggplot(plot_df2) + geom_line(aes(y = orig, x = year), color = "mediumaquamarine") + geom_line(aes(y = forecasted, x = year), color = "red", linetype = "dotted") + labs(x = "Year", y = "Number of Consonants") + ggtitle("Male: Observed Max Consonant Run vs. Forecast") 
+```
+
+Like the forecasting for the female names, these predict that the average longest number of consonants in a row will continue to decrease. This is likely because of the cubic fit to the data indicates a decrease. In general, forecasting the average longest number of consonants is likely not a reliable thing to forecast. We include these forecasts for exploratory purposes, but caution that they should not be considered accurate. 
+
+Ultimately, both of our analyses for the average maximum consonant run indicate a single peak occurring around the 1970s. We suspect the current downward trend will have to plateau or turn around eventually, but do not have data to back this up. In particular, we suspect that trends around the number of consonants occurring in a row might have a cyclical pattern not observable in the data set we have. There do not appear to be cycles of smaller frequencies. 
 
 # Conclusion? Discussion? 
 
